--- a/package.json
+++ b/package.json
@@ -8,12 +8,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/stack": "^5.14.9",
+    "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.22.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "geolocation": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-dotenv": "^3.2.0",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-location": "^2.5.0",
+    "react-native-maps": "0.29.3",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.5",
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
